# dapr-multi-app-testing

./: .env  .gitignore  README.md  SEMANTIC_SEARCH.md  dapr-multi-app-testing.sln  docker-compose.yml  test-sse-streaming.sh  test-sse.html
bug-reports/: dapr-workflow-bug-report.md
components/: statestore-pg-v-b.yaml
dapr-config/: config.yml
dotnet/: Dockerfile  Program.cs  api.csproj
dotnet/Activities/: ComputeSimilarityActivity.cs  GenerateEmbeddingsActivity.cs
dotnet/Models/: EmbeddingModels.cs
dotnet/Workflows/: SemanticSearchWorkflow.cs  SemanticSearchWorkflow2.cs
proxy/: Dockerfile  README.md  main.py  requirements.txt
python/: Dockerfile  README.md  pyproject.toml  requirements.txt
python/src/semantic_search/: __init__.py  config.py  main.py  web_server.py  workflow_manager.py
python/src/semantic_search/activities/: __init__.py  embedding_activity.py  generate_embeddings.py  similarity_activity.py
python/src/semantic_search/workflows/: __init__.py  semantic_search_workflow.py
web/: Dockerfile  index.html  nginx.conf
